@@ -697,6 +697,11 @@ a MySQL database application for book collectors.
 a database manager for magazines articles, currently using MySQL.
 </ul>
 
+<ul>
+<li><a href="http://diemer.it-pc.de/">AVR Delay loop Generator</a> -
+a simple app to create delay loops in assembler for AVR RISC processors.
+The users just specifies the time to delay.
+</ul>
 
 
 
