@@ -1,3 +1,7 @@
+2002-02-04  Damon Chaplin  <damon@ximian.com>
+
+	* apps.html: added AVR Delay loop Generator.
+
 2002-01-18  Damon Chaplin  <damon@ximian.com>
 
 	* index.html: added new tutorial.
